sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:17: error: not found: value nb_echange
            nb_echange = nb_echange+1
            ^AlgCocktailSort1:27: error: not found: value nb_echange
            nb_echange = nb_echange+1
            ^AlgCocktailSort1:33: error: not found: value nb_echnage2
 } while (nb_echange1!=0 && nb_echnage2!=0)
                            ^